[package]
name = "sink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
itertools = "0.14.0"
jiff = "0.2.15"
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
rand = "0.9.2"
